--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "seed": "rm -rf ./db/myDbFile.db && node db/seed.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -10,7 +11,9 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sqlite": "^3.0.6",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
